Atualização de anotações

--- a/LULULOL.yaml
+++ b/LULULOL.yaml
@@ -1,14 +1,11 @@
-Ajustar o lobby:
+!AJUSTAR !LOBBY:
 
 # Links de entrada
 # Links de saidas
 # Fotos referenciais
+# Style
 
-- PROJETO CRUD:
-  # Criar a classe noticias (listar tudo | [pra que? | {verificar | <porque não sei para o que usaria>}])
-
-  *Padronização
-    
+!PROJETO !CRUD:
 
   *MELHORIAS
   - Styles:
