--- a/LULULOL.yaml
+++ b/LULULOL.yaml
@@ -7,15 +7,15 @@
 
 !PROJETO !CRUD:
 
-  *MELHORIAS
+  #MELHORIAS
   - Styles:
-    [Index, Login, Gerenciar, Lista, Registrar, Editar, Portal, Nova, Alterar]
-    Header = logo, nome 
+    [Lista, Registrar, Editar, Portal, Nova, Alterar]
     Footer = infos diversas, *links diversos
     Estilização Individual
     Porte Mobile
-    READ.ME
-    Comentarios e organização nos códigos
+  
+  - READ.ME
+  - Comentarios e organização nos códigos:
 
 _____________________________________________________
 !PROJETO !FINAL
